# kde-which-key

./: README.md  pyproject.toml  ui.md
kde_which_key/: main.py
