[build-system]
requires = ["setuptools>=68.0"]
build-backend = "setuptools.build_meta"

[project]
name = "kde-which-key"
version = "0.1.0"
description = "Interactive keyboard shortcut browser and launcher for KDE"
readme = "README.md"
license = "MIT"
requires-python = ">=3.9"
authors = [
    { name = "readwithai" },
]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Environment :: Console",
    "Operating System :: POSIX :: Linux",
    "Programming Language :: Python :: 3",
    "Topic :: Desktop Environment :: K Desktop Environment (KDE)",
]

[project.scripts]
kde-which = "kde_which_key.main:main"

[project.urls]
Homepage = "https://github.com/readwithai/kde-which-key"